# door-simulator

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  controller.yaml  joint_names_complete_door_1.yaml  rviz.rviz
launch/: control.launch  display.launch  door.launch  door_with_controller.launch  gazebo.launch  handle_door.launch  pr2_door.launch  pull_door.launch
meshes/: door.stl  frame-kevin.stl  frame.stl  frame_16x22.stl  frame_17x22.stl  frame_18x22.stl  handle.stl  latch.stl  pull_handle1.stl
urdf/: door_fixed.gv  door_fixed.urdf  handle_door.urdf  handle_door_actuated.urdf  pr2_door.urdf  pull_door.urdf  pull_door_actuated.urdf
world/: door.world
