<package format="2">
  <name>door_simulator</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for door_simulator</p>
    <p>This package contains configuration data, 3D models and launch files
for door_simulator robot</p>
  </description>
  <author>Koki Shin</author>
  <maintainer email="kokishin@tamu.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>